@@ -1,38 +1,40 @@
 package service;
 
 import org.epam.error.AccessException;
+import org.epam.mapper.TrainerMapper;
 import org.epam.model.Trainee;
 import org.epam.model.Trainer;
+import org.epam.model.TrainingType;
 import org.epam.model.User;
 import org.epam.model.dto.TrainerDtoInput;
 import org.epam.model.dto.TrainerDtoOutput;
+import org.epam.model.dto.TrainingTypeOutputDto;
+import org.epam.model.dto.UserDtoOutput;
 import org.epam.repo.TraineeRepo;
 import org.epam.repo.TrainerRepo;
+import org.epam.repo.TrainingTypeRepo;
 import org.epam.repo.UserRepo;
+import org.epam.service.AuthenticationService;
 import org.epam.service.TrainerServiceImpl;
+import org.epam.service.UserService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.stubbing.Answer;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.anyList;
-import static org.mockito.Mockito.anyLong;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -51,174 +53,128 @@ class TrainerServiceTest {
     @Mock
     private TraineeRepo traineeRepo;
 
+    @Mock
+    private TrainerMapper trainerMapper;
+
+    @Mock
+    private TrainingTypeRepo trainingTypeRepo;
+
+    @Mock
+    private UserService userService;
+
+    @Mock
+    private AuthenticationService authenticationService;
+
+    private User user;
+    private List<Trainee> selectedTrainees;
+    private TrainerDtoInput trainerDtoInput;
+    private Trainer trainerToSave;
+    private TrainerDtoOutput savedTrainer;
+
+    private UserDtoOutput userDtoOutput;
+
+    @BeforeEach
+    void setUp() {
+        user = createUser();
+        userDtoOutput = createUserDtoOutput(user);
+        selectedTrainees = createSelectedTrainees();
+        trainerDtoInput = createTrainerDtoInput(user, selectedTrainees);
+        trainerToSave = createTrainerToSave(trainerDtoInput, selectedTrainees, user);
+        savedTrainer = createSavedTrainer(trainerToSave, userDtoOutput);
+    }
+
 
     @Test
-    void save_shouldOk() {
-        TrainerDtoInput trainerDtoInput = createTestTrainerDtoInput();
-        User user = createTestUser();
-        List<Trainee> selectedTrainees = createTestSelectedTrainees();
-        Trainer trainerToSave = createTestTrainerToSave();
-
-        when(userRepo.findById(anyLong())).thenReturn(Optional.of(user));
-        when(traineeRepo.findAllById(anyList())).thenReturn(selectedTrainees);
-        when(trainerRepo.save(any(Trainer.class))).thenReturn(trainerToSave);
+    void save_shouldReturnSavedTrainerDtoOutput() {
+        when(userRepo.existsById(user.getId())).thenReturn(true);
+        when(userRepo.findById(user.getId())).thenReturn(Optional.of(user));
+        when(trainerRepo.save(trainerToSave)).thenReturn(trainerToSave);
+        when(trainerMapper.toEntity(trainerDtoInput)).thenReturn(trainerToSave);
+        when(trainerMapper.toDtoOutput(trainerToSave)).thenReturn(savedTrainer);
+        when(trainingTypeRepo.findById(trainerDtoInput.getTrainingTypeId())).thenReturn(
+                Optional.ofNullable(trainerToSave.getTrainingType()));
+        when(traineeRepo.findAllByIdIn(trainerDtoInput.getTraineeIds())).thenReturn(selectedTrainees);
 
         TrainerDtoOutput result = trainerService.save(trainerDtoInput);
 
         assertNotNull(result);
-        assertEquals(trainerToSave.getId(), result.getId());
+        assertEquals(savedTrainer.getId(), result.getId());
+        assertEquals(savedTrainer.getTrainingType(), result.getTrainingType());
+        assertEquals(savedTrainer.getUser(), result.getUser());
+        assertEquals(savedTrainer.getTraineeIds(), result.getTraineeIds());
     }
 
     @Test
     void getByUserName_shouldOk() {
-        String userName = "testUser";
-        String password = "testPassword";
-        User user = createTestUser();
-        Trainer trainer = createTestTrainer();
+        when(trainerMapper.toDtoOutput(trainerToSave)).thenReturn(savedTrainer);
+        when(userService.findUserByUsername(user.getUserName())).thenReturn(Optional.of(user));
+        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.ofNullable(trainerToSave));
 
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
-        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainer));
-
-        TrainerDtoOutput result = trainerService.getByUserName(userName, password);
+        TrainerDtoOutput result = trainerService.getByUserName(user.getUserName(), user.getPassword());
 
         assertNotNull(result);
-        assertEquals(trainer.getId(), result.getId());
-        assertEquals(trainer.getTrainingTypeId(), result.getTrainingTypeId());
+        assertEquals(savedTrainer.getId(), result.getId());
+        assertEquals(savedTrainer.getTrainingType(), result.getTrainingType());
+        assertEquals(savedTrainer.getUser(), result.getUser());
+        assertEquals(savedTrainer.getTraineeIds(), result.getTraineeIds());
     }
 
     @Test
-    void getByUserName_WithIncorrectPassword_ShouldThrowAccessException() {
-        String userName = "testUser";
-        String password = "incorrectPassword";
-        User user = createTestUser();
+    void updateProfile_WithValidInput_ShouldOk() {
+        TrainerDtoInput updatedTrainer = createUpdatedTrainerDtoInput(user, selectedTrainees);
+        Trainer updatedSavedTrainer = createTrainerToSave(updatedTrainer, selectedTrainees, user);
+        TrainerDtoOutput savedUpdatedTrainer = createSavedTrainer(updatedSavedTrainer, userDtoOutput);
 
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
+        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainerToSave));
+        when(trainerRepo.save(any(Trainer.class))).thenReturn(updatedSavedTrainer);
+        when(userService.findUserByUsername(user.getUserName())).thenReturn(Optional.of(user));
+        when(trainerMapper.toDtoOutput(updatedSavedTrainer)).thenReturn(savedUpdatedTrainer);
+        when(trainingTypeRepo.findById(updatedTrainer.getTrainingTypeId())).thenReturn(
+                Optional.ofNullable(updatedSavedTrainer.getTrainingType()));
 
-        AccessException exception =
-                assertThrows(AccessException.class, () -> trainerService.getByUserName(userName, password));
-        assertEquals("You don't have access for this.", exception.getMessage());
-    }
-
-    @Test
-    void changePassword_WithIncorrectPassword_ShouldThrowAccessException() {
-        String userName = "testUser";
-        String oldPassword = "incorrectPassword";
-        String newPassword = "newPassword";
-        User user = createTestUser();
-
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
-
-        assertThrows(AccessException.class, () -> trainerService.changePassword(userName, oldPassword, newPassword));
-    }
-
-    @Test
-    void changePassword_WithValidInput_ShouldUpdateUserPassword() {
-        String userName = "testUser";
-        String oldPassword = "correctPassword";
-        String newPassword = "newPassword";
-        User user = createTestUser();
-        user.setPassword(oldPassword);
-        Trainer trainer = createTestTrainer();
-
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
-        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainer));
-
-        TrainerDtoOutput result = trainerService.changePassword(userName, oldPassword, newPassword);
+        TrainerDtoOutput result = trainerService.updateProfile(user.getUserName(), user.getPassword(), updatedTrainer);
 
         assertNotNull(result);
-        assertEquals(newPassword, user.getPassword());
+        assertEquals(updatedTrainer.getTrainingTypeId(), result.getTrainingType().getId());
+        assertEquals(updatedTrainer.getUserId(), result.getUser().getId());
     }
 
     @Test
-    void changePassword_WithValidInput_ShouldRetrieveTrainer() {
-        String userName = "testUser";
-        String oldPassword = "correctPassword";
-        String newPassword = "newPassword";
-        User user = createTestUser();
-        user.setPassword(oldPassword);
-        Trainer trainer = createTestTrainer();
+    void updateProfile_WithValidInput_IdDifferentIds() {
+        TrainerDtoInput updatedTrainer = createUpdatedTrainerDtoInput(user, selectedTrainees);
+        updatedTrainer.setTrainingTypeId(trainerDtoInput.getTrainingTypeId());
+        Trainer updatedSavedTrainer = createTrainerToSave(updatedTrainer, selectedTrainees, user);
+        TrainerDtoOutput savedUpdatedTrainer = createSavedTrainer(updatedSavedTrainer, userDtoOutput);
 
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
-        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainer));
+        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainerToSave));
+        when(trainerRepo.save(any(Trainer.class))).thenReturn(updatedSavedTrainer);
+        when(userService.findUserByUsername(user.getUserName())).thenReturn(Optional.of(user));
+        when(trainerMapper.toDtoOutput(updatedSavedTrainer)).thenReturn(savedUpdatedTrainer);
 
-        when(userRepo.save(any(User.class))).thenReturn(user);
-
-        TrainerDtoOutput result = trainerService.changePassword(userName, oldPassword, newPassword);
+        TrainerDtoOutput result = trainerService.updateProfile(user.getUserName(), user.getPassword(), updatedTrainer);
 
         assertNotNull(result);
-        assertNotNull(trainer);
+        assertEquals(updatedTrainer.getTrainingTypeId(), result.getTrainingType().getId());
+        assertEquals(updatedTrainer.getUserId(), result.getUser().getId());
     }
 
     @Test
     void updateProfile_WithValidInput_ShouldThrowAccessException() {
-        String userName = "testUser";
-        String password = "correctPassword";
-        TrainerDtoInput trainerDtoInput = createTestTrainerDtoInput();
-        User user = createTestUser();
+        TrainerDtoInput updatedTrainer = createUpdatedTrainerDtoInput(user, selectedTrainees);
 
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
-
-        assertThrows(AccessException.class, () -> trainerService.updateProfile(userName, password, trainerDtoInput));
-    }
-
-    @Test
-    void updateProfile_WithValidInput_ShouldReturnUpdatedTrainerDtoOutput() {
-        String userName = "testUser";
-        String password = "correctPassword";
-        User user = createTestUser();
-        user.setPassword(password);
-        Trainer trainer = createTestTrainer();
-        TrainerDtoInput trainerDtoInput = createTestTrainerDtoInput();
-
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
-        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainer));
-
-        when(trainerRepo.save(any(Trainer.class))).thenReturn(trainer);
-
-        TrainerDtoOutput result = trainerService.updateProfile(userName, password, trainerDtoInput);
-
-        assertNotNull(result);
-        assertEquals(trainerDtoInput.getTrainingTypeId(), result.getTrainingTypeId());
-        assertEquals(trainerDtoInput.getUserId(), result.getUser().getId());
-    }
-
-    @Test
-    void switchActivate_WithValidInput_ShouldReturnUpdatedTrainerDtoOutput() {
-        String userName = "testUser";
-        String password = "correctPassword";
-        User user = createTestUser();
-        user.setPassword(password);
-        Trainer trainer = createTestTrainer();
-        User updatedUser = createTestUser();
-        updatedUser.setIsActive(false);
-
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
-        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainer));
-        when(userRepo.save(user)).thenReturn(updatedUser);
-
-        TrainerDtoOutput result = trainerService.switchActivate(userName, password);
-
-        assertNotNull(result);
-        assertFalse(result.getUser().getIsActive());
-    }
-
-    @Test
-    void switchActivate_WithIncorrectPassword_ShouldThrowAccessException() {
-        String userName = "testUser";
-        String password = "incorrectPassword";
-        User user = createTestUser();
-
-        when(userRepo.findByUserName(userName)).thenReturn(Optional.of(user));
+        when(trainerRepo.findByUserId(user.getId())).thenReturn(Optional.of(trainerToSave));
+        when(userService.findUserByUsername(user.getUserName())).thenReturn(Optional.of(user));
 
         AccessException exception = assertThrows(AccessException.class,
-                () -> trainerService.switchActivate(userName, password));
+                () -> trainerService.updateProfile(user.getUserName(), user.getPassword(), updatedTrainer),
+                "An AccessException should be thrown when the user does not exist");
 
         assertEquals("You don't have access for this.", exception.getMessage());
     }
 
     @Test
     void getTrainersWithEmptyTrainees_ShouldReturnEmptyList() {
-        when(trainerRepo.findTrainersWithEmptyTraineesList()).thenReturn(new ArrayList<>());
+        when(trainerRepo.findByTraineesIsEmpty()).thenReturn(new ArrayList<>());
 
         List<TrainerDtoOutput> result = trainerService.getTrainersWithEmptyTrainees();
 
@@ -229,126 +185,182 @@ class TrainerServiceTest {
     @Test
     void getTrainersWithEmptyTrainees_ShouldReturnTrainersWithUserDetails() {
         List<Trainer> trainers = createTestTrainers();
-        List<Long> userIds = List.of(1L, 2L);
 
-        when(trainerRepo.findTrainersWithEmptyTraineesList()).thenReturn(trainers);
-        when(userRepo.findAllById(anyList())).thenAnswer((Answer<List<User>>) invocation -> {
-            List<Long> ids = invocation.getArgument(0);
-            return createTestUsers(ids);
-        });
+        when(trainerRepo.findByTraineesIsEmpty()).thenReturn(trainers);
 
         List<TrainerDtoOutput> result = trainerService.getTrainersWithEmptyTrainees();
 
         assertNotNull(result);
         assertEquals(2, result.size());
 
-        verify(trainerRepo, times(1)).findTrainersWithEmptyTraineesList();
-        verify(userRepo, times(1)).findAllById(userIds);
+        verify(trainerRepo).findByTraineesIsEmpty();
     }
 
-    private TrainerDtoInput createTestTrainerDtoInput() {
-        TrainerDtoInput trainerDtoInput = new TrainerDtoInput();
-        trainerDtoInput.setUserId(1L);
-        List<Long> traineeIds = List.of(2L, 3L, 4L);
-        trainerDtoInput.setTraineeIds(traineeIds);
+    @Test
+    void authenticate_ValidPasswordAndMatchingIds_NoExceptionThrown() {
+        when(authenticationService.checkAccess(user.getPassword(), user)).thenReturn(false);
 
-        return trainerDtoInput;
+        assertDoesNotThrow(() -> trainerService.authenticate(user.getPassword(), user, trainerDtoInput),
+                "Exception should not be thrown for valid credentials and matching IDs");
+
+        verify(authenticationService).checkAccess(user.getPassword(), user);
     }
 
-    private User createTestUser() {
-        User user = new User();
-        user.setId(1L);
-        user.setUserName("testUser");
-        user.setPassword("testPassword");
-        user.setIsActive(true);
+    @Test
+    void authenticate_InvalidPassword_AccessExceptionThrown() {
+        when(authenticationService.checkAccess("Invalid password", user)).thenReturn(true);
 
-        return user;
+        AccessException exception = assertThrows(AccessException.class,
+                () -> trainerService.authenticate("Invalid password", user, trainerDtoInput),
+                "An AccessException should be thrown for invalid password");
+
+        verify(authenticationService).checkAccess("Invalid password", user);
+
+        assertEquals("You don't have access for this.", exception.getMessage());
     }
 
-    private List<Trainee> createTestSelectedTrainees() {
-        Trainer trainer1 = createTestTrainer();
-        Trainer trainer2 = createTestTrainer();
+    @Test
+    void authenticate_MismatchedIds_AccessExceptionThrown() {
+        trainerDtoInput.setId(user.getId() + 1);
 
+        when(authenticationService.checkAccess(user.getPassword(), user)).thenReturn(false);
+
+        AccessException exception = assertThrows(AccessException.class,
+                () -> trainerService.authenticate(user.getPassword(), user, trainerDtoInput),
+                "An AccessException should be thrown for mismatched IDs");
+
+        verify(authenticationService).checkAccess(user.getPassword(), user);
+
+        assertEquals("You don't have access for this.", exception.getMessage());
+    }
+
+    @Test
+    void checkUserExisting_UserExists_NoExceptionThrown() {
+        when(userRepo.existsById(user.getId())).thenReturn(true);
+
+        assertDoesNotThrow(() -> trainerService.checkUserExisting(user.getId()),
+                "No exception should be thrown when the user exists");
+
+        verify(userRepo).existsById(user.getId());
+    }
+
+    @Test
+    void checkUserExisting_UserDoesNotExist_AccessExceptionThrown() {
+        Long notExistingUserId = user.getId() + 1;
+
+        when(userRepo.existsById(notExistingUserId)).thenReturn(false);
+
+        AccessException exception = assertThrows(AccessException.class,
+                () -> trainerService.checkUserExisting(notExistingUserId),
+                "An AccessException should be thrown when the user does not exist");
+
+        verify(userRepo).existsById(notExistingUserId);
+
+        assertEquals("You don't have access for this.", exception.getMessage());
+    }
+
+    @Test
+    void authenticate_ValidPassword_NoExceptionThrown() {
+        when(authenticationService.checkAccess(user.getPassword(), user)).thenReturn(false);
+
+        assertDoesNotThrow(() -> trainerService.authenticate(user.getPassword(), user),
+                "No exception should be thrown for a valid password");
+
+        verify(authenticationService).checkAccess(user.getPassword(), user);
+    }
+
+    @Test
+    void authenticate_InvalidPassword_AccessExceptionThrown2() {
+        when(authenticationService.checkAccess("Invalid password", user)).thenReturn(true);
+
+        AccessException exception = assertThrows(AccessException.class,
+                () -> trainerService.authenticate("Invalid password", user),
+                "An AccessException should be thrown for an invalid password");
+
+        verify(authenticationService).checkAccess("Invalid password", user);
+
+        assertEquals("You don't have access for this.", exception.getMessage());
+    }
+
+    public TrainerDtoInput createTrainerDtoInput(User user, List<Trainee> trainees) {
+        return TrainerDtoInput.builder()
+                              .id(user.getId())
+                              .trainingTypeId(1L)
+                              .userId(user.getId())
+                              .traineeIds(trainees.stream().map(Trainee::getId).collect(Collectors.toList()))
+                              .build();
+    }
+
+    public TrainerDtoInput createUpdatedTrainerDtoInput(User user, List<Trainee> trainees) {
+        return TrainerDtoInput.builder()
+                              .id(user.getId())
+                              .trainingTypeId(2L)
+                              .userId(user.getId())
+                              .traineeIds(trainees.stream().map(Trainee::getId).collect(Collectors.toList()))
+                              .build();
+    }
+
+    public User createUser() {
+        return User.builder().id(1L).userName("testUser").password("testPassword").isActive(true).prefix(0).build();
+    }
+
+    public UserDtoOutput createUserDtoOutput(User user) {
+        return UserDtoOutput.builder()
+                            .id(user.getId())
+                            .firstName(user.getFirstName())
+                            .lastName(user.getLastName())
+                            .userName(user.getUserName())
+                            .isActive(user.getIsActive())
+                            .build();
+    }
+
+    public List<Trainee> createSelectedTrainees() {
         Trainee trainee1 = new Trainee();
-        trainee1.setId(1L);
-        trainee1.setTrainers(new ArrayList<>(Arrays.asList(trainer1, trainer2)));
+        trainee1.setId(2L);
+        trainee1.setTrainers(new ArrayList<>(List.of(Trainer.builder().id(3L).trainees(new ArrayList<>()).build())));
 
         Trainee trainee2 = new Trainee();
-        trainee2.setId(2L);
-        trainee2.setTrainers(new ArrayList<>(Arrays.asList(trainer1, trainer2)));
+        trainee2.setId(3L);
+        trainee2.setTrainers(new ArrayList<>(List.of(Trainer.builder().id(4L).trainees(new ArrayList<>()).build())));
 
-        return Arrays.asList(trainee1, trainee2);
+        return List.of(trainee1, trainee2);
     }
 
-    private Trainer createTestTrainerToSave() {
-        Trainer trainer = new Trainer();
-        trainer.setId(1L);
-        trainer.setTrainingTypeId(123L);
-        List<Trainee> trainees = createTestSelectedTrainees();
-        trainer.setTrainees(trainees);
-
-        return trainer;
+    public Trainer createTrainerToSave(TrainerDtoInput trainerDtoInput, List<Trainee> trainees, User user) {
+        return Trainer.builder()
+                      .trainingType(new TrainingType(trainerDtoInput.getTrainingTypeId(), "Gym"))
+                      .trainees(trainees)
+                      .user(user)
+                      .build();
     }
 
-    public Trainer createTestTrainer() {
-        Trainer trainer = new Trainer();
-        trainer.setId(1L);
-        trainer.setTrainingTypeId(5L);
-        trainer.setUserId(1L);
-
-        List<Trainee> trainees = new ArrayList<>();
-        Trainee trainee1 = new Trainee();
-        trainee1.setId(1L);
-        trainee1.setUserId(11L);
-        trainee1.setAddress("Trainee Address 1");
-        trainee1.setDateOfBirth(LocalDate.of(1998, 8, 12));
-        trainee1.setTrainers(Collections.singletonList(trainer));
-
-        Trainee trainee2 = new Trainee();
-        trainee2.setId(2L);
-        trainee2.setUserId(12L);
-        trainee2.setAddress("Trainee Address 2");
-        trainee2.setDateOfBirth(LocalDate.of(1999, 6, 24));
-        trainee2.setTrainers(Collections.singletonList(trainer));
-
-        trainees.add(trainee1);
-        trainees.add(trainee2);
-
-        trainer.setTrainees(trainees);
-
-        return trainer;
+    public TrainerDtoOutput createSavedTrainer(Trainer trainer, UserDtoOutput userDtoOutput) {
+        return TrainerDtoOutput.builder()
+                               .id(trainer.getUser().getId())
+                               .trainingType(new TrainingTypeOutputDto(trainer.getTrainingType().getId(),
+                                       trainer.getTrainingType().getName()))
+                               .traineeIds(
+                                       trainer.getTrainees().stream().map(Trainee::getId).collect(Collectors.toList()))
+                               .user(userDtoOutput)
+                               .build();
     }
 
     private List<Trainer> createTestTrainers() {
-        List<Trainer> trainers = new ArrayList<>();
-        Trainer trainer1 = new Trainer();
-        trainer1.setId(1L);
-        trainer1.setTrainingTypeId(1L);
-        trainer1.setUserId(1L);
-        trainer1.setTrainees(new ArrayList<>());
+        Trainer trainer1 = Trainer.builder()
+                                  .id(1L)
+                                  .trainingType(new TrainingType(1L, "Yoga"))
+                                  .user(new User(1L, "Antonio", "Lopes", "antonio.lopes", "password1", true, 0))
+                                  .trainees(new ArrayList<>())
+                                  .build();
 
-        Trainer trainer2 = new Trainer();
-        trainer2.setId(2L);
-        trainer2.setTrainingTypeId(2L);
-        trainer2.setUserId(2L);
-        trainer2.setTrainees(new ArrayList<>());
 
-        trainers.add(trainer1);
-        trainers.add(trainer2);
+        Trainer trainer2 = Trainer.builder()
+                                  .id(2L)
+                                  .trainingType(new TrainingType(2L, "Box"))
+                                  .user(new User(2L, "Hugo", "Boss", "hugo.boss", "password2", true, 0))
+                                  .trainees(new ArrayList<>())
+                                  .build();
 
-        return trainers;
-    }
-
-    private List<User> createTestUsers(List<Long> userIds) {
-        List<User> users = new ArrayList<>();
-        for (Long userId : userIds) {
-            User user = new User();
-            user.setId(userId);
-            user.setUserName("TestUser" + userId);
-            user.setPassword("TestPassword" + userId);
-            user.setIsActive(true);
-            users.add(user);
-        }
-        return users;
+        return List.of(trainer1, trainer2);
     }
 }
